doc: init table of contents
Signed-off-by: Lukáš Drahník <ldrahnik@gmail.com>

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -10,37 +10,52 @@
 
 \begin{document}
 
-\begin{center}
-\textsc{\Huge Fakulta informačních technologií\\
-Vysoké učení technické v~Brně\\}
+\begin{titlepage}
+	
+	\begin{center}
+		{\Huge\textsc{Vysoké učení technické v~Brně}}\\
+		\medskip
+		{\huge\textsc{Fakulta informačních technologií}}\\
+		\vspace{\stretch{0.382}}
+		{\huge Téma 1: Stomatologická ordinace}\\
+		\medskip
+		{\LARGE Technická zpráva k projektu do předmětu IMS}\\
+		\vspace{\stretch{0.618}}
+	\end{center}
 
-\LARGE \title{Modelování a simulace\\}
-\textbf{1. Služby, infrastruktura a energetika}
+Ladislav Bezděčík xbezdec13@stud.fit.vutbr.cz\hfill{}
 
-\hfill \author{Ladislav Bezděčík xbezdec13@stud.fit.vutbr.cz\\
- Drahník Lukáš xdrahn00@stud.fit.vutbr.cz}
-\end{center}
+Lukáš Drahník xdrahn00@stud.fit.vutbr.cz \hfill{}{Brno, \today}
 
-{\let\newpage\relax\maketitle}
 
-\newpage
-
-\section*{Obsah}
-\begin{itemize}
-  \item Úvod
-  \item Závěr
-  \item Použitá literatura
-\end{itemize}
+\end{titlepage}
 
 \newpage
 
-\section*{Úvod}
-...
+\tableofcontents
 
-\section*{Závěr}
-...
+\newpage
 
-\subsection{Použitá literatura}
+\section{Úvod}
+
+\section{Konceptuální model}
+
+\subsection{Návrh}
+\subsection{Zdroje informací}
+\subsection{Validita}
+\subsection{Petriho síť}
+\section{Simulační model}
+\subsection{Návrh}
+\section{Experimenty}
+\subsection{Stanovené cíle pro experimenty a způsob jejich dosažení}
+\subsection{Jednotlivé experimenty}
+\subsubsection{Experiment 1}
+\subsubsection{Experiment 2}
+\subsubsection{Experiment 3}
+\subsubsection{Experiment 4}
+\subsection{Závěry plynoucí z experimentů}
+\section{Závěr}
+\section{Použitá literatura}
 
 \nocite{*}
 
