doc: add petri net image, doc without experiments conclusion and experiments
Signed-off-by: Lukáš Drahník <ldrahnik@gmail.com>

--- a/doc/local.bib
+++ b/doc/local.bib
@@ -38,3 +38,8 @@
   title="{Slajdy k přednáškám modelování a simulace}",
   note="{Dostupné online https://wis.fit.vutbr.cz/FIT/st/cfs.php?file=\%2Fcourse\%2FIMS-IT\%2Flectures\%2FIMS.pdf\&cid=12760}"
 }
+@misc{pipe2,
+  author="{Sarah Tattersall}",
+  title="{A tool for creating and analysing Petri nets}",
+  note="{Dostupné online https://sourceforge.net/projects/pipe2/}"
+}
