--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -4,6 +4,7 @@
 \usepackage[czech]{babel}
 \usepackage[left=2cm,top=3cm,text={17cm,24cm}]{geometry}
 \usepackage{graphicx}
+\graphicspath{ {images/} }
 \usepackage{listings}
 \usepackage{url}
 \usepackage{amsmath, amsthm, amssymb}
@@ -59,7 +60,7 @@ Při modelování (viz. \cite{ims}, slajd 8) stomatologické ordinace jsme postu
 \newline
 Sestřičky mají za úkol vyřizovat hovory s novými pacienty, se stávajícími pacienty, obsluhovat při vstupní prohlídce rentgen, pacienta připravit na volné křeslo pro zubaře, asistovat zubaři při pravidelné kontrole a lehkém zákroku při počtu 1 sester a těžkém zákroku při počtu 2 sester, kdy druhá se neúčastní nachystání pacienta a posléze placení, ale asistuje pouze na zákrok.
 \newline
-Zubaři se věnují pacientovi pouze na křesle a to při pravidelné kontrole, lehkému zákroku a těžkému zákroku. Po každém pacientovi mají čas na uklidnění pro sebe a to nejméně na dobu trvající připravení nového pacienta sestřičkou.
+Zubaři se věnují pacientovi pouze na křesle a to při pravidelné kontrole, lehkému zákroku a těžkému zákroku. Po každém pacientovi mají čas na uklidnění pro sebe a to nejméně na dobu trvající připravení nového pacienta sestřičkou. Je nutno podotknout, že doba trvání jednotlivých zákroků záleží na zkušenostech daného zubaře a asistující sestřičky.
 \newline
 Každá ordinace má hranicí pacientů, které může reálně zvládnout. V systému jako kapacita registrací. Také je potřeba znát kapacitu plánovaných návštěv pro dlouhodobě udržitelný chod ordinace při udržení kvality poskytující péče.
 \newline
@@ -74,25 +75,164 @@ U stávajícího pacienta je větší šance na ztrátu klienta při nenabídnut
 Byl použit jazyk C++ společně s knihovnou SIMLIB \cite{simlib}, která splňovala veškerá naše očekávaní kladená zadáním a která se potvrdila použitím knihovny při vypracování. Při vypracování bylo čerpáno z prvního demonstračního cvičení \cite{dem01}, druhého demonstračního cvičení\cite{dem02} a semináři o projektech \cite{seminar} k předmětu IMS.
 
 
-\section{Konceptuální model}
+\section{Koncepce}
 
+Cílem projektu je simulovat stomatologickou ordinace s konkrétním cílem zkoumat udržitelný počet klintů. Byla zanedbána poruchovost rentgenu z důvodu vysoké spolehlivosti a poruchovost křesla z důvodu neovlivňování chodu ordinace. V případě času stráveném prováděním zákroků byla hodnota odhadnuta pro průměrného zubaře, protože dle rozložení pravděpodobnosti v získaných datem z ročenek \cite{ceskastomatologickakomorarocenky} je velký počet starších zubařů mezi 60-69, stejně jako velký počet mladých 20-34, v případě, že nerozlišujeme pohlaví.
 
+\subsection{Formy konceptuálního modelu}
 
-\subsection{Návrh}
-\subsection{Zdroje informací}
-\subsection{Validita}
-\subsection{Petriho síť}
-\section{Simulační model}
-\subsection{Návrh}
-\section{Experimenty}
-\subsection{Stanovené cíle pro experimenty a způsob jejich dosažení}
+Abstraktní model (viz. \cite{ims}, slajd 42 - 44) ordinace byl popsán pomocí Petriho sítě (viz. \cite{ims}, slajd 123 - 135) na základě relevantních údajů zmíněných výše. K tomuto účelu byl zvolen vhodný program podporující Petriho sítě - Pipe2 \cite{pipe2}.
+
+\subsection{Architektura simulačního modelu}
+
+Na začátku je generátor typu Event (viz. \cite{ims}, slajd 162), který vytváří nové pacienty. První nový pacient je vygenerovaný při spuštění simulací a poté vždy s nastaveným časového rozložení s takovým středem, který je ovlivnitelný u každého experimentu pomocí argumentů.
+\newline
+Všichni zaměstnanci, tzn. sestřičky, zubaři, křesla, kapacita registrací a kapacita návštěv jsou modelovány jako Store (viz. \cite{ims}, slajd 184), jejichž hodnoty lze ovlivnit u každého experimentu pomocí argumentů.
+\newline
+Rentgen je modelován jako Facility (viz. \cite{ims}, slajd 146), předpokládá se, že z finančních důvodů bude rentgen jenom 1.
+\newline
+K simulaci času vycházející již z návrhu popsaného Petriho síťí je použita funkce Exponential (viz. \cite{ims}, slajd 106).
+\newline
+Na přechody s procentuálním rozdělením je použita metoda Random (viz. \cite{ims}, slajd 167).
+\newline
+Histogram (viz. \cite{ims}, slajd 181) je použit na čas strávený v čekárně čekající na sestřičku a rentgen, čas strávený v čekárně čekající na zubaře a na sledování sestřiček.
+\newline
+Hlavní část programu používá Proces (viz. \cite{ims}, slajd 172), tato část modeluje chování od objednání nového pacienta, kdy volá sestřiče, po příchodu do čekárny na rentgen, který provádí sestřička, vyplnění registrace již bez sestřičky, následuje jeho první prohlídka, případné zaplacení a zařazení do role stávajících pacientů, kteří se objednávají po určité době sami pokud se tedy neobjedná na konci návštěvy.
+\newline
+Jako Process je také naimplementována pauza Zubaře, který je po zákroku.
+\newline
+Do souboru společně s daty z každého Store se vypisují důležité informace pro experimenty jako například odmítnutí pacienti.
+
+\section{Podstata simulačních experimentů a jejich průběh}
+
+Experimenty bylo ověřováno, kolik pacientů zvládne daný počet zubařů, sestřiček s daným počtem křesel. Experimenty začínáme od nově založené ordinace, která disponuje 2 sestřičkami, 1 zubařem, 1 křeslem a inkrementujeme přičemž vypouštíme nesmyslné kombinace jako 2 zubaři a 1 křeslo atp. Jako výstup experimentů se očekává maximum možných registrací a kapacita plánovaných návštěv. Jako kritérium kdy je experiment úspěšný a my jsme nalezli přibližnou mezní hodnotu jsou sledovány obě čekárny, počet odmítnutých pacientů a počet stávajících pacientů.
+
+\subsection{Postup experimentování}
+
+V každém z experimentů se budeme snažit nalézt hodnoty kapacit plánovaných návštěv a maximum možných registrací. Experimenty provádíme při běhu simulace po dobu 5-ti let.\newline
+
+ 1. nastavení doby na 5 let a postupně použijeme kombinace 1 nový pacient / den, 2, 4, 8
+
+ 2. nastavení počtu sestřiček, zubařů, křesel dle varianty experimentu
+
+ 3. nastavení defaultní hodnoty pro kapacitu plánovaných návštěv a maximum možných registrací
+
+ 4. nastavení výstupního souboru rozdílného pro každý experiment
+
+ 5. spuštění simulace
+
+ 6. zkontrolování hodnot 
+
+ 7. opakování od kroku 3. upravením hodnoty kapacitu plánovaných návštěv pokud je pravda něco z následujícího:
+
+	7.1 je příliš malá/velká vytíženost sestřiček
+
+	7.2 je příliš malá/velká vytíženost zubařů
+
+	7.3 dost pacientů není objednáno z důvodu malé kapacity / kapacita je využívána minimálně
+
+	7.4 čekací doba v čekárnách je příliš velká
+
+	7.5 stávající počet klientů je mnohem nižší než počet registrovaných
+
+ 8. opakování od kroku 3. upravením hodnoty maxima možných registrací pokud je pravda něco z následujícího:
+
+	8.1 dost nových pacientů není objednáno z důvodu malé kapacity
+
+	8.2 stávající počet klientů je mnohem nižší než počet registrovaných
+
+ 9. při nalezení vhodných hodnot maxim začínáme od kroku 1. s upravenou hodnotou generování nových pacientů
+
 \subsection{Jednotlivé experimenty}
 \subsubsection{Experiment 1}
+
+Experiment probíhá při nastavení hodnot na: 1 zubař, 2 sestřičky, 1 křeslo.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita plánovaných návštěv \\ \hline
+1        & 0                	& 0           		\\ \hline
+2       & 0          		& 0           		\\ \hline
+4       & 0   			& 0        		\\ \hline
+8       & 0   			& 0           		\\ \hline
+\end{tabular}
+\end{table}
+
 \subsubsection{Experiment 2}
+
+Experiment probíhá při nastavení hodnot na: 2 zubaři, 2 sestřičky, 2 křesla.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita plánovaných návštěv \\ \hline
+1        & 0                	& 0           		\\ \hline
+2       & 0          		& 0           		\\ \hline
+4       & 0   			& 0        		\\ \hline
+8       & 0   			& 0           		\\ \hline
+\end{tabular}
+\end{table}
+
 \subsubsection{Experiment 3}
+
+Experiment probíhá při nastavení hodnot na: 2 zubaři, 3 sestřičky, 2 křesla.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita plánovaných návštěv \\ \hline
+1        & 0                	& 0           		\\ \hline
+2       & 0          		& 0           		\\ \hline
+4       & 0   			& 0        		\\ \hline
+8       & 0   			& 0           		\\ \hline
+\end{tabular}
+\end{table}
+
 \subsubsection{Experiment 4}
-\subsection{Závěry plynoucí z experimentů}
-\section{Závěr}
+
+Experiment probíhá při nastavení hodnot na: 3 zubaři, 3 sestřičky, 3 křesla.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita plánovaných návštěv \\ \hline
+1        & 0                	& 0           		\\ \hline
+2       & 0          		& 0           		\\ \hline
+4       & 0   			& 0        		\\ \hline
+8       & 0   			& 0           		\\ \hline
+\end{tabular}
+\end{table}
+
+\subsubsection{Experiment 5}
+
+Experiment probíhá při nastavení hodnot na: 3 zubaři, 5 sestřičky, 3 křesla.
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|l|l|l|}
+\hline
+Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita plánovaných návštěv \\ \hline
+1        & 0                	& 0           		\\ \hline
+2       & 0          		& 0           		\\ \hline
+4       & 0   			& 0        		\\ \hline
+8       & 0   			& 0           		\\ \hline
+\end{tabular}
+\end{table}
+
+\section{Závěry experimentů}
+
+Celkem bylo provedeno 20 experimentů. Všechny experimenty byly zaměřeny na zjištění optimálního maxima možných registrací a kapacitu plánovaných návštěv pro konkrétní počet zaměstnanců. Z uvedených experimentů vyplynulo, že ...
+\newline
+Výsledky a nalezená optimální maxima jsou dostupná v souboru Makefile pod příkazem make run a uloženy v nově vytvořených souborech experiment[1-5].out.
+
+\section{Shrnutí simulačních experimentů a závěr}
+
+Provedené experimenty potvrzují, že s dostatkem informací o konkrétní stomatologické ordinaci lze predikovat pomocí modelu a experimentů pomocí něho provedených její chování s dostatečnou přesností.
 
 \newpage
 
