--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -158,6 +158,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 4       & 0   			& 0        		\\ \hline
 8       & 0   			& 0           		\\ \hline
 \end{tabular}
+\caption {Výsledné hodnoty pro experiment 1} \label{tab:title} 
 \end{table}
 
 \subsubsection{Experiment 2}
@@ -174,6 +175,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 4       & 0   			& 0        		\\ \hline
 8       & 0   			& 0           		\\ \hline
 \end{tabular}
+\caption {Výsledné hodnoty pro experiment 2} \label{tab:title} 
 \end{table}
 
 \subsubsection{Experiment 3}
@@ -190,6 +192,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 4       & 0   			& 0        		\\ \hline
 8       & 0   			& 0           		\\ \hline
 \end{tabular}
+\caption {Výsledné hodnoty pro experiment 3} \label{tab:title} 
 \end{table}
 
 \subsubsection{Experiment 4}
@@ -206,6 +209,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 4       & 0   			& 0        		\\ \hline
 8       & 0   			& 0           		\\ \hline
 \end{tabular}
+\caption {Výsledné hodnoty pro experiment 4} \label{tab:title} 
 \end{table}
 
 \subsubsection{Experiment 5}
@@ -222,6 +226,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 4       & 0   			& 0        		\\ \hline
 8       & 0   			& 0           		\\ \hline
 \end{tabular}
+\caption {Výsledné hodnoty pro experiment 5} \label{tab:title} 
 \end{table}
 
 \section{Závěry experimentů}
