--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -148,7 +148,7 @@ V každém z experimentů se budeme snažit nalézt hodnoty kapacit plánovanýc
 
 Experiment probíhá při nastavení hodnot na: 1 zubař, 2 sestřičky, 1 křeslo.
 
-\begin{table}[h]
+\begin{table}[h!]
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
@@ -216,7 +216,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 
 Experiment probíhá při nastavení hodnot na: 3 zubaři, 5 sestřičky, 3 křesla.
 
-\begin{table}[h]
+\begin{table}[h!]
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
@@ -229,7 +229,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 \caption {Výsledné hodnoty pro experiment 5} \label{tab:title} 
 \end{table}
 
-\section{Závěry experimentů}
+\subsection{Závěry experimentů}
 
 Celkem bylo provedeno 20 experimentů. Všechny experimenty byly zaměřeny na zjištění optimálního maxima možných registrací a kapacitu plánovaných návštěv pro konkrétní počet zaměstnanců. Z uvedených experimentů vyplynulo, že ...
 \newline
