doc: tables fixed on their positions
Signed-off-by: Lukáš Drahník <ldrahnik@gmail.com>

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -165,7 +165,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 
 Experiment probíhá při nastavení hodnot na: 2 zubaři, 2 sestřičky, 2 křesla.
 
-\begin{table}[h]
+\begin{table}[h!]
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
@@ -182,7 +182,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 
 Experiment probíhá při nastavení hodnot na: 2 zubaři, 3 sestřičky, 2 křesla.
 
-\begin{table}[h]
+\begin{table}[h!]
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
@@ -199,7 +199,7 @@ Počet nových pacientů / 24 hodin & Maximum možných registrací & Kapacita p
 
 Experiment probíhá při nastavení hodnot na: 3 zubaři, 3 sestřičky, 3 křesla.
 
-\begin{table}[h]
+\begin{table}[h!]
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
