doc: petriho net added as attachement, *.zip added to .gitignore, atachemments added to zip file
Signed-off-by: Lukáš Drahník <ldrahnik@gmail.com>

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -81,7 +81,7 @@ Cílem projektu je simulovat stomatologickou ordinace s konkrétním cílem zkou
 
 \subsection{Formy konceptuálního modelu}
 
-Abstraktní model (viz. \cite{ims}, slajd 42 - 44) ordinace byl popsán pomocí Petriho sítě (viz. \cite{ims}, slajd 123 - 135) na základě relevantních údajů zmíněných výše. K tomuto účelu byl zvolen vhodný program podporující Petriho sítě - Pipe2 \cite{pipe2}.
+Abstraktní model (viz. \cite{ims}, slajd 42 - 44) ordinace byl popsán pomocí Petriho sítě (viz. \cite{ims}, slajd 123 - 135) na základě relevantních údajů zmíněných výše. K tomuto účelu byl zvolen vhodný program podporující Petriho sítě - Pipe2 \cite{pipe2}. Petriho síť je přiložena v příloze [1] k této technické zprávě.
 
 \subsection{Architektura simulačního modelu}
 
@@ -238,6 +238,12 @@ Výsledky a nalezená optimální maxima jsou dostupná v souboru Makefile pod p
 \section{Shrnutí simulačních experimentů a závěr}
 
 Provedené experimenty potvrzují, že s dostatkem informací o konkrétní stomatologické ordinaci lze predikovat pomocí modelu a experimentů pomocí něho provedených její chování s dostatečnou přesností.
+
+\section{Přílohy}
+
+\begin{enumerate}
+\item Petriho síť - petri\_nets.png
+\end{enumerate}
 
 \newpage
 
